--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,7 +13,7 @@ a {
     margin:0;
 }
 
-ul > li {
+.nav ul > li {
     display:inline;
 }
 
@@ -30,4 +30,27 @@ li a:hover {
 
 .layout {
     padding:20px;
+}
+
+
+button {
+    border:none;
+    padding:10px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    background-color:black;
+    color:white;
+
+}
+
+
+.login-status {
+    font-size:12px;
+    color:red;
+}
+
+.about ul {
+    list-style-type:sqaure important;
+    display:block;
 }
