--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -11,7 +11,7 @@
                         <label for="Password">Password</label>
                         <input type="text" name="Password" value="" placeholder="password" ng-model='password'>
                        
-                        <button ng-click='testController.onLoginUser()'>Submit</button>
+                        <button class="login-submit" ng-click='testController.onLoginUser()'>Submit</button>
                         <span class="login-status">{{ statusMessage }}</span>
 
                     </fieldset>
